Tried to fix safari stretched user profile picture

--- a/src/css/github_repos.css
+++ b/src/css/github_repos.css
@@ -14,6 +14,7 @@
 }
 #github_user_profile_picture {
   width: 80px;
+  height: 80px;
   border-radius: 100%;
 }
 .github_repo {
